--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <button>Hi woring</button>
+    <button id="bt" onclick="show()">Hi woring</button>
+    <p id="test"></p>
+    <script src="test.js"></script>
 </body>
 </html>
