--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Hello</h1>
     <button id="bt" onclick="show()">Hi woring</button>
     <p id="test"></p>
-    <script src="test.js"></script>
+    <script src="test.js">dsfsd</script>
 </body>
 </html>
