--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello</h1>
     <button id="bt" onclick="show()">Hi woring</button>
-    <p id="test"></p>
-    <script src="test.js">dsfsd</script>
+    <p id="test">dadsa</p>
+    <script src="test.js"></script>
 </body>
 </html>
